<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn ="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"/>
        <item
            android:id="@+id/share"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/share"/>
        <item
            android:id="@+id/aboutus"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about_us"/>
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/sign_out"
                />
        </menu>
    </item>
</menu>