<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bglogselect"
    android:padding="25dp">

    <!--container-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <!--logo-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/infologo"
            android:contentDescription="@string/informaticslogo">
        </ImageView>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/informatics_baguio_student_portal"
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:textSize="18sp"
            android:textColorHint="@color/white">
        </TextView>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/logo"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/portallogo">
        </ImageView>
    <!--label-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="45dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/select_login_option"
            android:textColor="@color/white"
            android:textSize="20sp">
        </TextView>
    <!--buttons-->
    <!--student-->
        <Button
            android:id="@+id/btn_student"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#1374C8"
            android:fontFamily="@font/montserrat"
            android:hint="@string/student"
            android:textColorHint="@color/white"
            android:textSize="20sp">
        </Button>
    <!--admin-->
        <Button
            android:id="@+id/btn_admin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="#19325B"
            android:fontFamily="@font/montserrat"
            android:hint="@string/admin"
            android:textColorHint="@color/white"
            android:textSize="20sp">
        </Button>

    </LinearLayout>
</RelativeLayout>