<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:gravity="bottom"
    android:padding="16dp"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:background="#FFFFFF">
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_person_24"
        android:contentDescription="@string/adminlogo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_informatics_edu_ph"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"/>

</LinearLayout>