<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/circle"
            android:padding="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/baseline_person_24"
                android:contentDescription="@string/admin"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/eurostile"
            android:gravity="center"
            android:text="Username"
            android:textColor="#19325B"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/account_type_admin"
            android:textColor="#19325B"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/topradius"
        android:layout_marginTop="180dp"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profilesettings"
            android:fontFamily="@font/montserrat"
            android:textSize="25sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/you_can_change_your_account_information_and_password"
            android:textSize="13sp"
            android:layout_marginBottom="5dp"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="@color/white"/>
        <!--form-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">
            <!--admin username-->
            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#1b2838"
                app:helperTextTextColor="#CB4545">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tb_adminUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#c7d5e0"
                    android:fontFamily="@font/montserrat"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#1b2838"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="Username: ">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!--admin password-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#c7d5e0"
                app:helperTextTextColor="#CB4545"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tb_adminPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#19325B"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="#c7d5e0"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="Password: ">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!--login button-->
            <Button
                android:id="@+id/btn_save_changes"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginTop="50dp"
                android:background="@drawable/rounded2"
                android:fontFamily="@font/montserrat"
                android:hint="@string/save_changes"
                android:textColor="@color/white"
                android:textColorHint="#FAFAFA"
                android:textSize="15sp">
            </Button>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>